--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,14 +54,14 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="{{ path('app_acceuil') }}" class="nav-item nav-link">Home</a>
-            <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="courses.html" class="nav-item nav-link">Courses</a>
+            <a href="{{ path('app_about') }}" class="nav-item nav-link">About</a>
+            <a href="{{ path('app_courses') }}" class="nav-item nav-link">Courses</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu fade-down m-0">
-                    <a href="team.html" class="dropdown-item">Our Team</a>
-                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    <a href="404.html" class="dropdown-item">404 Page</a>
+                    <a href="{{ path('app_team') }}" class="dropdown-item">Our Team</a>
+                    <a href="{{ path('app_testimonial') }}" class="dropdown-item">Testimonial</a>
+                    <a href="{{ path('app_oops') }}" class="dropdown-item">404 Page</a>
                 </div>
             </div>
             <a href="{{ path('app_contact') }}" class="nav-item nav-link">Contact</a>
