--- a/templates/cours/new.html.twig
+++ b/templates/cours/new.html.twig
@@ -4,9 +4,28 @@
 
 {% block body %}
 
-    <h1>Create new Cours</h1>
+{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
-    {{ include('cours/_form.html.twig') }}
+<div class="mb-3">
+    {{ form_label(form.nom_cours, 'Nom du cours') }}
+    {{ form_widget(form.nom_cours, {'attr': {'class': 'form-control ' ~ (form.nom_cours.vars.errors|length > 0 ? 'is-invalid' : ''), 'placeholder': 'Entrez le nom du cours'}}) }}
+    {{ form_errors(form.nom_cours, {'attr': {'class': 'text-danger'}}) }}
+</div>
 
-    <a href="{{ path('app_cours_index') }}">back to list</a>
+<div class="mb-3">
+    {{ form_label(form.description, 'Description') }}
+    {{ form_widget(form.description, {'attr': {'class': 'form-control ' ~ (form.description.vars.errors|length > 0 ? 'is-invalid' : ''), 'placeholder': 'Entrez la description du cours'}}) }}
+    {{ form_errors(form.description, {'attr': {'class': 'text-danger'}}) }}
+</div>
+
+<div class="mb-3">
+    {{ form_label(form.avancement, 'Avancement') }}
+    {{ form_widget(form.avancement, {'attr': {'class': 'form-control ' ~ (form.avancement.vars.errors|length > 0 ? 'is-invalid' : ''), 'placeholder': 'Entrez l\'avancement du cours'}}) }}
+    {{ form_errors(form.avancement, {'attr': {'class': 'text-danger'}}) }}
+</div>
+
+<button class="btn btn-success">{{ button_label|default('Save') }}</button>
+
+{{ form_end(form) }}
+
 {% endblock %}
