--- a/templates/courses/index.html.twig
+++ b/templates/courses/index.html.twig
@@ -14,7 +14,7 @@
                 <div class="col-lg-7 col-md-6">
                     <div class="row g-3">
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
-                            <a class="position-relative d-block overflow-hidden" href="">
+                            <a class="position-relative d-block overflow-hidden" href="{{ path('app_cours_detail') }}">
                                 <img class="img-fluid" src="{{ asset('img/speaker_3.jpg')}}" alt="">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
                                     <h5 class="m-0">Maitrisez l'art de parler en public  </h5>
