--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>LEXILEARN</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -58,10 +58,10 @@
             <a href="{{ path('app_acceuil') }}" class="nav-item nav-link">Home</a>
             <a href="{{ path('app_about') }}" class="nav-item nav-link">About</a>
             <a href="{{ path('app_courses') }}" class="nav-item nav-link">Courses</a>
-            <a href="{{ path('app_session') }}" class="nav-item nav-link">SESSIONS</a> 
-            <a href="{{ path('app_testimonial') }}" class="nav-item nav-link">Testimonial</a>
+            <a href="{{ path('app_session') }}" class="nav-item nav-link">Sessions</a> 
+            <a href="{{ path('app_testimonial') }}" class="nav-item nav-link">Competitions
+            </a>
               <a href="{{ path('app_contact') }}" class="nav-item nav-link">Contact</a>
-                </div>
             </div>
         </div>
         <a href="{{path('app_login')}}" class="btn btn-primary ">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
@@ -100,16 +100,16 @@
                 <h4 class="text-white mb-3">Gallery</h4>
                 <div class="row g-2 pt-2">
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{{asset('img/course-1.jpg')}}" alt="">
+                        <img class="img-fluid bg-light p-1" src="{{ asset('img/form1.jpg') }}" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{{asset('img/course-2.jpg')}}" alt="">
+                        <img class="img-fluid bg-light p-1" src="{{ asset('img/form2.jpg') }}" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{{asset('img/course-3.jpg')}}" alt="">
+                        <img class="img-fluid bg-light p-1" src="{{asset('img/mang.jpg') }}" alt="">
                     </div>
                     <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="{{asset('img/course-2.jpg')}}" alt="">
+                        <img class="img-fluid bg-light p-1" src="{{ asset('img/pronocia.jpg') }}" alt="">
                     </div>
                     <div class="col-4">
                         <img class="img-fluid bg-light p-1" src="{{asset('img/course-3.jpg')}}" alt="">
