--- a/public/back/css/sb-admin-2.css
+++ b/public/back/css/sb-admin-2.css
@@ -41,10 +41,24 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+.btn-search {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-search:hover {
+  background-color: #1e88e5; /* Change color on hover */
+}
+
+.btn-search:focus {
+  outline: none; /* Remove outline on focus */
+}
+
+.btn-search i {
+  font-size: 18px; /* Increase the size of the icon */
 }
 
 html {
