fixing crud on back template

--- a/templates/baseB.html.twig
+++ b/templates/baseB.html.twig
@@ -95,7 +95,7 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{path('app_c_back')}}">Cours</a>
+                        <a class="collapse-item" href="{{path('app_cours_news')}}">Cours</a>
                         <a class="collapse-item" href="{{path('app_L_back')}}">Lessons</a>
                     </div>
                 </div>
@@ -106,7 +106,8 @@
            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-trophy"></i>
+                    <img src="{{asset('back/img/competition.svg')}}"style="width: 2rem; height: 2rem;">
+
                     <span>Gestion Competitions</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
@@ -116,6 +117,7 @@
                     </div>
                 </div>
             </li>
+         
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
