--- a/templates/cl_back/index.html.twig
+++ b/templates/cl_back/index.html.twig
@@ -1,6 +1,42 @@
-{% extends 'BaseB.html.twig'%}
-{% block title %}{% endblock %}
+{% extends 'BaseB.html.twig' %}
+
+{% block title %}
+    <p>kjkdlqjsdlqj</p>
+{% endblock %}
 
 {% block content %}
+<h1>Cours index</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nom_cours</th>
+            <th>Description</th>
+            <th>Avancement</th>
+            <th>actions</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for cour in cours %}
+        <tr>
+            <td>{{ cour.id }}</td>
+            <td>{{ cour.nomCours }}</td>
+            <td>{{ cour.description }}</td>
+            <td>{{ cour.avancement }}</td>
+            <td>
+                <a href="{{ path('app_cours_show', {'id': cour.id}) }}">show</a>
+                <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">edit</a>
+            </td>
+        </tr>
+    {% else %}
+        <tr>
+            <td colspan="5">no records found</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+<a href="{{ path('app_cours_index') }}">back to list</a>
+
 
 {% endblock %}
