add crud cours to back template

--- a/templates/baseB.html.twig
+++ b/templates/baseB.html.twig
@@ -105,26 +105,14 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-<<<<<<< HEAD
-                        <a class="collapse-item" href="{{path('app_cours_news')}}">Cours</a>
+                        <a class="collapse-item" href="{{path('app_c_back')}}">Cours</a>
                         <a class="collapse-item" href="{{path('app_L_back')}}">Lessons</a>
-=======
-                        <a class="collapse-item" href="{{path('app_c_back')}}"> Courses </a>
-                        <a class="collapse-item" href="{{path('app_L_back')}}"> Lessons</a>
->>>>>>> 373c12ca12e7679d73bac7bbf869e8fd29af3064
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Charts -->
            <li class="nav-item">
-<<<<<<< HEAD
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <img src="{{asset('back/img/competition.svg')}}"style="width: 2rem; height: 2rem;">
-
-                    <span>Gestion Competitions</span>
-=======
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
                      <div class="d-flex align-items-center">   
                        <div class="icon-circle bg-primary mr-2">
@@ -133,7 +121,6 @@
                 </div> 
                     <span>Competitions</span>
                       </div> 
->>>>>>> 373c12ca12e7679d73bac7bbf869e8fd29af3064
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
