--- a/templates/cl_back/_form.html.twig
+++ b/templates/cl_back/_form.html.twig
@@ -1,4 +1,36 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h3 class="card-title mb-0">Edit Cours <img src="{{asset('back/img/update.svg')}}"style="width: 2rem; height: 2rem;"></h3>
+                </div>
+                <div class="card-body">
+                    {{ form_start(form, {'attr': {'class': 'form'}}) }}
+
+                    <div class="form-group">
+                        {{ form_label(form.nom_cours, 'Nom du Cours', {'label_attr': {'class': 'control-label'}}) }}
+                        {{ form_widget(form.nom_cours, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.nom_cours, {'attr': {'class': 'text-danger'}}) }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form_label(form.description, 'Description', {'label_attr': {'class': 'control-label'}}) }}
+                        {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.description, {'attr': {'class': 'text-danger'}}) }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form_label(form.avancement, 'Avancement', {'label_attr': {'class': 'control-label'}}) }}
+                        {{ form_widget(form.avancement, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_errors(form.avancement, {'attr': {'class': 'text-danger'}}) }}
+                    </div>
+
+                    <button type="submit" class="btn btn-primary justify-content-center">{{ button_label|default('Save')  }}<img src="{{asset('back/img/save.svg')}}"style="width: 2rem; height: 2rem;" class="ml-2 items-center"></button>
+
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
