--- a/templates/cl_back/index.html.twig
+++ b/templates/cl_back/index.html.twig
@@ -5,38 +5,49 @@
 {% endblock %}
 
 {% block content %}
-<h1>Cours index</h1>
+<div class="row justify-content-between mr-4">
+    <h1>Cours List</h1>
+    <a href="{{ path('app_cours_news') }}" class="btn btn-secondary mr-3 mt-4 ">                                
+        <img src="{{asset('back/img/add.svg')}}"style="width: 1.5rem; height: 1.5rem;">
+        Add New Cours</a></div>
+    
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Nom_cours</th>
-            <th>Description</th>
-            <th>Avancement</th>
-            <th>actions</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for cour in cours %}
-        <tr>
-            <td>{{ cour.id }}</td>
-            <td>{{ cour.nomCours }}</td>
-            <td>{{ cour.description }}</td>
-            <td>{{ cour.avancement }}</td>
-            <td>
-                <a href="{{ path('app_cours_show', {'id': cour.id}) }}">show</a>
-                <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">edit</a>
-            </td>
-        </tr>
-    {% else %}
-        <tr>
-            <td colspan="5">no records found</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-<a href="{{ path('app_cours_index') }}">back to list</a>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead class="bg-primary">
+                <tr class="text-white">
+                    <th scope="col" >#</th>
+                    <th scope="col">Cours Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Avancement</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for cour in cours %}
+                    <tr>
+                        <td>{{ cour.id }}</td>
+                        <td>{{ cour.nomCours }}</td>
+                        <td>{{ cour.description }}</td>
+                        <td>{{ cour.avancement }}</td>
+                        <td>
+                            <a href="{{ path('app_cours_shows', {'id': cour.id}) }}" class="btn btn-primary btn-sm">
+                                <img src="{{asset('back/img/view.svg')}}"style="width: 1.5rem; height: 1.5rem;">
+                                View</a>
+                            <a href="{{ path('app_cours_edits', {'id': cour.id}) }}" class="btn btn-warning btn-sm">
+                                <img src="{{asset('back/img/update.svg')}}"style="width: 1.5rem; height: 1.5rem;">
+
+                                Update</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="5" class="text-center">Aucun enregistrement trouvé</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 
 {% endblock %}
