--- a/templates/cl_back/_deleteL_form.html.twig
+++ b/templates/cl_back/_deleteL_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_lesson_delete', {'id': lecon.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_cours_deletes', {'id': lecon.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ lecon.id) }}">
     <button  class="btn btn-primary mr-3 mt-4">Delete <img src="{{asset('back/img/delete.svg')}}"style="width: 1.5rem; height: 1.5rem;"></button>
 </form>
